--- a/etcd.service
+++ b/etcd.service
@@ -1,14 +1,14 @@
 [Unit]
 Description=Etcd Server
 After=network.target
-Requires=etcd.socket
 
 [Service]
 Type=simple
-StandardOutput=journal
-StandardError=journal
+# etc logs to the journal directly, suppress double logging
+StandardOutput=null
+WorkingDirectory=/var/lib/etcd
+User=etcd
 ExecStart=/usr/bin/etcd
 
 [Install]
 WantedBy=multi-user.target
-Also=etcd.socket
