rhbz#1176138 - update to v2.0.0-rc.1
NVR: etcd-2.0.0-1.rc1 (not built in koji yet)

This commit doesn't solve resolve rhbz#1176138 completely, as the package
update isn't quite working as expected. More work is needed on this.

Signed-off-by: Lokesh Mandvekar <lsm5@fedoraproject.org>

--- a/etcd.service
+++ b/etcd.service
@@ -6,7 +6,7 @@ After=network.target
 Type=simple
 # etc logs to the journal directly, suppress double logging
 StandardOutput=null
-WorkingDirectory=/var/lib/etcd
+WorkingDirectory=/var/lib/etcd/`$hostname`.etcd
 User=etcd
 ExecStart=/usr/bin/etcd
 
