default to /var/lib/etcd/default.etcd as 2.0 uses that default

--- a/etcd.conf
+++ b/etcd.conf
@@ -6,7 +6,7 @@
 # cert_file = ""
 # cors = []
 # cpu_profile_file = ""
-# data_dir = "."
+data_dir = "/var/lib/etcd/default.etcd"
 # discovery = "http://etcd.local:4001/v2/keys/_etcd/registry/examplecluster"
 # http_read_timeout = 10
 # http_write_timeout = 10
@@ -16,7 +16,7 @@
 # max_cluster_size = 9
 # max_result_buffer = 1024
 # max_retry_attempts = 3
-# name = "default-name"
+name = "default"
 # snapshot = false
 # verbose = false
 # very_verbose = false
