--- a/etcd.service
+++ b/etcd.service
@@ -4,9 +4,7 @@ After=network.target
 
 [Service]
 Type=simple
-# etc logs to the journal directly, suppress double logging
-# StandardOutput=null
-# This does not appear to be the case 
+WorkingDirectory=/var/lib/etcd/
 EnvironmentFile=-/etc/etcd/etcd.conf
 User=etcd
 ExecStart=/usr/bin/etcd
