Fix .service files to work if no config file

--- a/etcd.service
+++ b/etcd.service
@@ -4,8 +4,7 @@ After=network.target
 
 [Service]
 Type=simple
-# etc logs to the journal directly, suppress double logging
-StandardOutput=null
+WorkingDirectory=/var/lib/etcd/
 EnvironmentFile=-/etc/etcd/etcd.conf
 User=etcd
 ExecStart=/usr/bin/etcd
