set GOMAXPROCS to use all processors available

--- a/etcd.service
+++ b/etcd.service
@@ -7,7 +7,8 @@ Type=simple
 WorkingDirectory=/var/lib/etcd/
 EnvironmentFile=-/etc/etcd/etcd.conf
 User=etcd
-ExecStart=/usr/bin/etcd
+# set GOMAXPROCS to number of processors
+ExecStart=/bin/bash -c "GOMAXPROCS=$(nproc) /usr/bin/etcd"
 Restart=on-failure
 LimitNOFILE=65536
 
