Set Type=notify instead of simple in etcd.service (upstream #1576) - related: #1272438

--- a/etcd.service
+++ b/etcd.service
@@ -3,7 +3,7 @@ Description=Etcd Server
 After=network.target
 
 [Service]
-Type=simple
+Type=notify
 WorkingDirectory=/var/lib/etcd/
 EnvironmentFile=-/etc/etcd/etcd.conf
 User=etcd
