--- a/etcd.service
+++ b/etcd.service
@@ -1,6 +1,8 @@
 [Unit]
 Description=Etcd Server
 After=network.target
+After=network-online.target
+Wants=network-online.target
 
 [Service]
 Type=notify
