--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /man-3.2.16.tar.gz
 /etcd-e1ca3b4434945e57e8e3a451cdbde74a903cc8e1.tar.gz
 /man-3.3.12.tar.gz
+/etcd-f29b1ada19713544b698dab8c94c97cfa1e83dac.tar.gz
