--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 /etcd-e1ca3b4434945e57e8e3a451cdbde74a903cc8e1.tar.gz
 /man-3.3.12.tar.gz
 /etcd-f29b1ada19713544b698dab8c94c97cfa1e83dac.tar.gz
+/etcd-cca0d5c1bed134ac30e1354241f7655d2a118db4.tar.gz
+/etcd-3.3.13.tar.gz
+/man-3.3.13.tar.gz
