--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 /etcd-cca0d5c1bed134ac30e1354241f7655d2a118db4.tar.gz
 /etcd-3.3.13.tar.gz
 /man-3.3.13.tar.gz
+/etcd-3.4.3.tar.gz
+/man-3.4.3.tar.gz
+/etcd-3.4.7.tar.gz
+/man-3.4.7.tar.gz
